# jailmaker

./: .editorconfig  .gitignore  ATTRIBUTIONS.md  Cargo.toml  Jailbreak.sln  Makefile.toml  PRIVACY.md  README.md
Documents/: ActionBox.md  DynamicContentManagement.md
Documents/API/: Item.md  Recipe.md  Tileset.md  manifest.md
Documents/Tools/: ArrayTool.md  PencilTool.md
Jailbreak/: Jailbreak.csproj  app.manifest
Jailbreak.Utility/Source/: Program.cs
Jailbreak/Content/: Content.mgcb
Jailbreak/Content/_bootstrap/: manifest.yml  readme.txt
Jailbreak/Content/_global/: manifest.yml
Jailbreak/Content/escapists/: Manifest.yaml
Jailbreak/Source/: Jailbreak.cs  Program.cs  ValidationScene.cs
Jailbreak/Source/Bootstrap/: BootstrapScene.cs  ModSelectScene.cs
Jailbreak/Source/Content/: ContentPredicate.cs  CreditedUser.cs  DynamicContentManager.cs
Jailbreak/Source/Data/: ContentPath.cs  ContentPathConverter.cs  KeysTypeConverter.cs  MapLoader.cs  PropertyContainer.cs
Jailbreak/Source/Editor/: EditHistory.cs  EditMode.cs  EditorDebugHUD.cs  EditorMapRenderer.cs  EditorMenuBar.cs  EditorScene.cs  EditorSoundEffects.cs  EditorState.cs
Jailbreak/Source/Input/: InputManager.cs  KeyBinding.cs  KeyMap.cs  MouseButton.cs
Jailbreak/Source/Interface/: EditorMapPropertiesWindow.cs  EditorTilePalette.cs  ToggleWindow.cs
Jailbreak/Source/Mod/: ModDefinition.cs  ModManager.cs
Jailbreak/Source/Object/: BaseObject.cs  EditorObject.cs  MissingObject.cs  ObjectDefinition.cs
Jailbreak/Source/Render/: Background.cs  (+5 more)
src/: camera.rs  input.rs  jailmaker.rs  main.rs
(+104 files in other folders)
